Bug 112306 - FILESAVE: An XLSX gives warning about Pivot Table cache on opening in Excel after saving in Calc
Summary: FILESAVE: An XLSX gives warning about Pivot Table cache on opening in Excel a...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.0.0
Keywords: filter:xlsx
Depends on:
Blocks:
 
Reported: 2017-09-10 06:24 UTC by Mike Kaganski
Modified: 2017-09-11 10:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Pivot table with blanks-only field (12.34 KB, application/zip)
2017-09-10 06:24 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2017-09-10 06:24:42 UTC
Created attachment 136142 [details]
Pivot table with blanks-only field

After fixing bug 89139, a problem still exists, that is visible with attached document.

When opened and saved in Calc, it gives a warning on opening in Excel:
"We found a problem with some content in "BlankOnly.xlsx". Do you want to try to recover as much as we can? If you trust the source of this workbook, click Yes."
and then
"Repaired Records: PivotTable report from /xl/pivotCache/pivotCacheDefinition1.xml part (PivotTable cache)"

The problem is that Calc writes `containsSemiMixedTypes="0"` attribute for blank-only field. It seems to be consistent with the attribute's definition in ECMA-376-1:2016, where it is stated that it is only true if the field contains text values. Still, if only blanks are present (no strings), it is expected to be true by Excel.
Comment 1 Mike Kaganski 2017-09-10 06:26:43 UTC
A fix is under review: https://gerrit.libreoffice.org/42130
Comment 2 Commit Notification 2017-09-10 07:24:55 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=09122a537318f7ada075820f3b1ef83a64e56751

tdf#112306: containsSemiMixedTypes is true for blanks-only

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Jacques Guilleron 2017-09-10 13:59:58 UTC
Hi Mike,

I reproduce with Excel Starter Kit 2010 under Windows 7.
I try the fix tomorrow.
Comment 4 Mike Kaganski 2017-09-10 20:17:50 UTC
(In reply to Jacques Guilleron from comment #3)

Thank you for looking!
Please set to verified if your testing will be successful.
Comment 5 Jacques Guilleron 2017-09-11 10:04:07 UTC
Hi Mike,
Test file Opens without warning in Excel 2010
after saving in
LO  6.0.0.0.alpha0+ Build ID: ffeb750163909e15ee0dd2d16f8030bf08e66eae
CPU threads: 2; OS: Windows 6.1; UI render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2017-09-11_06:33:01
Locale: fr-FR (fr_FR); Calc: CL

Have a nice day.