tdf#112306: containsSemiMixedTypes is true for blanks-only

Also export containsNonDate

Change-Id: I16283a272d51e6c305f8c381c359168c1e3848a8
Reviewed-on: https://gerrit.libreoffice.org/42130
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>